--- a/doc/en/index.docbook
+++ b/doc/en/index.docbook
@@ -63,8 +63,6 @@
     <sect1 id="requirements">
       <title>Requirements</title>
       <para>&kcheckgmail; 0.5.7 has only been tested with KDE 3.5.x but it might also work with older versions.</para>
-      <para>Since version 0.5.7 &kcheckgmail; requires the usage of unsermake instead of make.</para>
-      <para>Check the <ulink url="http://wiki.kde.org/tiki-index.php?page=unsermake">unsermake wiki</ulink> for more information.</para>
     </sect1>
 
     <sect1 id="compilation-and-installation">
@@ -73,8 +71,8 @@
       <para>Compiling &kcheckgmail; is very easy. The following should do
 	it: <screen>
 <prompt>%</prompt> <userinput><command>./configure</command></userinput>
-<prompt>%</prompt> <userinput><command>unsermake</command></userinput>
-<prompt>%</prompt> <userinput><command>unsermake</command> install</userinput></screen>
+<prompt>%</prompt> <userinput><command>make</command></userinput>
+<prompt>%</prompt> <userinput><command>make</command> install</userinput></screen>
       </para>
 
       <para>That should do it! Should you run into any problems,
