Fixed some hypens

--- a/kcheckgmail.1
+++ b/kcheckgmail.1
@@ -67,7 +67,7 @@ Waits for a WM_NET compatible windowmanager
 sets the application GUI style
 .TP
 .B  \-\-geometry  <geometry>
-sets the client geometry of the main widget - see man X for the argument format
+sets the client geometry of the main widget \(hy see man X for the argument format
 .TP
 .B  \-\-nofork  
 Don't run in the background.
@@ -75,18 +75,18 @@ Don't run in the background.
 .SS Qt options:
 .TP
 .B  \-\-display  <displayname>
-Use the X-server display 'displayname'
+Use the X\(hyserver display 'displayname'
 .TP
 .B  \-\-session  <sessionId>
 Restore the application for the given 'sessionId'
 .TP
 .B  \-\-cmap  
 Causes the application to install a private color
-map on an 8-bit display
+map on an 8\(hybit display
 .TP
 .B  \-\-ncols  <count>
 Limits the number of colors allocated in the color
-cube on an 8-bit display, if the application is
+cube on an 8\(hybit display, if the application is
 using the QApplication::ManyColor color
 specification
 .TP
@@ -95,7 +95,7 @@ tells Qt to never grab the mouse or the keyboard
 .TP
 .B  \-\-dograb  
 running under a debugger can cause an implicit
--nograb, use -dograb to override
+\-nograb, use \-dograb to override
 .TP
 .B  \-\-sync  
 switches to synchronous mode for debugging
@@ -122,7 +122,7 @@ sets the application title (caption)
 .TP
 .B  \-\-visual  TrueColor
 forces the application to use a TrueColor visual on
-an 8-bit display
+an 8\(hybit display
 .TP
 .B  \-\-inputstyle  <inputstyle>
 sets XIM (X Input Method) input style. Possible
@@ -144,7 +144,7 @@ Full user documentation is available through the KDE Help Center.  You can also 
 .BR help:/kcheckgmail/
 directly into konqueror or you can run 
 .BR "`khelpcenter help:/kcheckgmail/'"
-from the command-line.
+from the command\(hyline.
 .br
 .SH AUTHORS
 .nf
