--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Rogério Pereira Araújo <rogerio.araujo@gmail.com>
 Samuele Kaplun <kaplun@aliceposta.it>
 Loic Pefferkorn <loic@dev.erodia.net>
 Raphael Geissert <atomo64@gmail.com>
+Luis Pereira <luis.artur.pereira@gmail.com>
