--- a/doc/en/index.docbook
+++ b/doc/en/index.docbook
@@ -23,7 +23,7 @@
 </author>
 </authorgroup>
 <date>2007-08-19</date>
-<releaseinfo>0.5.7.1</releaseinfo>
+<releaseinfo>0.5.8.dev</releaseinfo>
 <abstract>
 <para>&kcheckgmail; is a simple KDE systray application that notifies when new email is received in a Gmail account.</para>
 </abstract>
@@ -62,7 +62,7 @@
 
     <sect1 id="requirements">
       <title>Requirements</title>
-      <para>&kcheckgmail; 0.5.7.1 has only been tested with KDE 3.5.x but it might also work with older versions.</para>
+      <para>&kcheckgmail; 0.5.8.dev has only been tested with KDE 3.5.x but it might also work with older versions.</para>
     </sect1>
 
     <sect1 id="compilation-and-installation">
@@ -93,7 +93,7 @@
     <sect1 id="dcop-interface">
       <title>DCOP Interface</title>
 
-      <para>Since version 0.5.7 &kcheckgmail; provides a more useful DCOP interface:
+      <para>Since version 0.5.8.dev &kcheckgmail; provides a more useful DCOP interface:
 	<screen>
 <prompt>%</prompt> <userinput><command>dcop kcheckgmail KCheckGmailIface</command></userinput>
 int mailCount()
